@@ -358,6 +358,9 @@
 		<a href="#about-createrect">create rect (width, height, style)</a><br>
 		
 	
+		<a href="#about-createscroll">create scroll (width, height)</a><br>
+		
+	
 		<a href="#about-createselect">create select (width, height)</a><br>
 		
 	
@@ -887,6 +890,12 @@
 		
 	
 		<a href="#about-getscriptname">get script name (string id, script id)</a><br>
+		
+	
+		<a href="#about-getscrollbarstyle">get scroll bar style (handle)</a><br>
+		
+	
+		<a href="#about-getscrollcheckdepth">get scroll check depth (handle)</a><br>
 		
 	
 		<a href="#about-getselectsliceindex">get select slice index (handle)</a><br>
@@ -1645,6 +1654,9 @@
 		<a href="#about-scripterror">script error (string id)</a><br>
 		
 	
+		<a href="#about-scrolltochild">scroll to child (parent, child)</a><br>
+		
+	
 		<a href="#about-searchstring">search string (ID1, ID2, start)</a><br>
 		
 	
@@ -1972,6 +1984,12 @@
 		<a href="#about-setrightpadding">set right padding (handle, pixels)</a><br>
 		
 	
+		<a href="#about-setscrollbarstyle">set scroll bar style (handle, style)</a><br>
+		
+	
+		<a href="#about-setscrollcheckdepth">set scroll check depth (handle, depth)</a><br>
+		
+	
 		<a href="#about-setsecondssofplay">set seconds of play (sec)</a><br>
 		
 	
@@ -2156,6 +2174,9 @@
 		
 	
 		<a href="#about-sliceisrect">slice is rect (handle)</a><br>
+		
+	
+		<a href="#about-sliceisscroll">slice is scroll (handle)</a><br>
 		
 	
 		<a href="#about-sliceisselect">slice is select (handle)</a><br>
@@ -8260,6 +8281,62 @@ end
 			
 			<br>See also: <ul class="seealso"><li><a href="#about-setselectsliceindex" class="ref">set select slice index</a></li></ul>
 		</tt></p>
+		<a name="about-createscroll"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">create scroll (width, height)</font></b><br>
+			Creates a new scroll slice, and returns an handle to it. Scroll slices are special containers that automatically draw a scrollbar on ther right and bottom edges if their children do not fit inside them. The two arguments are the width and height of the select slice.<br>
+			
+			
+		</tt></p>
+		<a name="about-sliceisscroll"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">slice is scroll (handle)</font></b><br>
+			Return true if the <span class="param">handle</span> is a scroll slice, or false if it is any other type of slice.<br>
+			
+			
+		</tt></p>
+		<a name="about-setscrollbarstyle"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">set scroll bar style (handle, style)</font></b><br>
+			Changes the style of a scroll slice's scrollbar. The first argument is the handle of the scroll slice. The second argument is the style number. Scroll bar styles use the same colors as text box styles. The background color is used for the entire scrollbar, and the foreground color is used for the position indicator in the scrollbar.<br>
+			
+			<br>See also: <ul class="seealso"><li><a href="#about-getscrollbarstyle" class="ref">get scroll bar style</a></li></ul>
+		</tt></p>
+		<a name="about-getscrollbarstyle"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">get scroll bar style (handle)</font></b><br>
+			Returns the current style number of a scroll slice's scrollbar. The first argument is the handle of the scroll slice. Scroll bar styles use the same numbering as text box styles.<br>
+			
+			<br>See also: <ul class="seealso"><li><a href="#about-setscrollbarstyle" class="ref">set scroll bar style</a></li></ul>
+		</tt></p>
+		<a name="about-setscrollcheckdepth"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">set scroll check depth (handle, depth)</font></b><br>
+			Changes the number of generations of children and grandchildren that a scroll slice cares about. The first argument is the handle of the scroll slice. The second argument is the desired depth, or 0 to check the entire family tree of all child slices. For example, a depth of 1 means the scroll only considers children. 2 means it considers children+grandchildren. 3 means it considers children+grandchildren+greatgrandchildren.<br>
+			
+			<br>See also: <ul class="seealso"><li><a href="#about-getscrollcheckdepth" class="ref">get scroll check depth</a></li></ul>
+		</tt></p>
+		<a name="about-getscrollcheckdepth"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">get scroll check depth (handle)</font></b><br>
+			Returns the number of generations of children and grandchildren that a scroll slice cares about, or 0 if it considers the entire family tree of every child. The first argument is the handle of the scroll slice. For example, a return value of 1 means the scroll only considers children. 2 means it considers children+grandchildren. 3 means it considers children+grandchildren+greatgrandchildren.<br>
+			
+			<br>See also: <ul class="seealso"><li><a href="#about-setscrollcheckdepth" class="ref">set scroll check depth</a></li></ul>
+		</tt></p>
+		<a name="about-scrolltochild"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">scroll to child (parent, child)</font></b><br>
+			Causes all the children of the parent slice to be scrolled until the screen position of the child slice fits inside the parent. This is mainly intended for scroll slices, such as those created with the <a href="#about-createscroll" class="ref">create scroll</a> command, but it can be used on any type of slice. (Children that are set to fill their parents, or children that are automatically positioned by a grid parent may be unaffected.)<br>
+			
+			
+		</tt></p>
 		<a name="about-slicecollidepoint"></a>
 		<p>
 		<tt>
@@ -11959,7 +12036,7 @@ end</pre>
 			</tt></p>
 
 		<hr>
-	<p>Stats: There are 810 commands in this file, of which 57 are only references to other commands.</p>
+	<p>Stats: There are 817 commands in this file, of which 57 are only references to other commands.</p>
 <p>This file was generated from an XML file. The contents were painstakingly transcribed by Mike Caron from the original Plotscripting Dictionary, which was created by James Paige.</p>
 </body>
 </html>
